Fix CORS duplication issue and update project configs